// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test CheckBox component render a CheckBox component 1`] = `
<CheckBox
  helperProps={Object {}}
  label="test label"
  name="test name"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "test name",
          false,
        ],
        Array [
          "test name",
          1,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  required={false}
  value="1"
>
  <div
    className="form__group  form__group--checkbox form__group--wrap"
  >
    <label
      className="form__question form__question--boolean_field checkbox_input"
      htmlFor="test name"
    >
      <span>
        test label
      </span>
    </label>
    <div
      className="form__item"
      onClick={[Function]}
    >
      <input
        checked="checked"
        id="test name"
        name="test name"
        onChange={[Function]}
        type="checkbox"
      />
      <label />
    </div>
    <hr />
    <HelperComponent />
  </div>
</CheckBox>
`;

exports[`Test CheckBox component with required render a CheckBox component 1`] = `
<CheckBox
  helperProps={Object {}}
  label="test label"
  name="test name"
  onChange={[MockFunction]}
  required={true}
  value="1"
>
  <div
    className="form__group  form__group--checkbox form__group--wrap"
  >
    <label
      className="form__question form__question--boolean_field checkbox_input"
      htmlFor="test name"
    >
      <span>
        test label
      </span>
      <span
        className="form__required"
      >
         *
      </span>
    </label>
    <div
      className="form__item"
      onClick={[Function]}
    >
      <input
        checked="checked"
        id="test name"
        name="test name"
        onChange={[Function]}
        type="checkbox"
      />
      <label />
    </div>
    <hr />
    <HelperComponent />
  </div>
</CheckBox>
`;
